src/objects/Timecard__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDate_custom__c</fullName>
        <description>Scon実行用項目</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>作成日（カスタム）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Syussya_Time__c</fullName>
        <description>Syussya_Time</description>
        <label>出社日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syussya_Time_value__c</fullName>
        <description>1.出社日時の時間（hh）をテキスト変換し、数値にして+9時間。
2.出社日時の分（mm）をテキスト変換し、数値にして時間算出するために/60し、小数点下2桁でまるめる
3.上記1と2を加算</description>
        <formula>(VALUE(MID(TEXT(Syussya_Time__c),12,2)) +9)+(VALUE(MID(TEXT(Syussya_Time__c),15,2)) /60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出勤時間を数値換算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Syussya_bi__c</fullName>
        <formula>DATEVALUE(  Syussya_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出社日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Taisya_Hour__c</fullName>
        <description>残業時間（18時以降）を算出するための項目。
※項目名：退社時間を数値換算で対応可能だが、計算文字数制限オーバーのため作成</description>
        <formula>VALUE(MID(TEXT(Taisya_Time__c),12,2))+9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社時間（時間のみ）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taisya_Time__c</fullName>
        <description>Taisya_Time</description>
        <label>退社日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Taisya_Time_value__c</fullName>
        <description>1.退社日時をテキスト変換し、時間（hh）部分を切出し、数値にして+9時間。
2.退社日時をテキスト変換し、分（mm）部分を切出し、数値にして時間算出するために/60し、小数点下2桁でまるめる
3.上記1と2を加算</description>
        <formula>(VALUE(MID(TEXT(Taisya_Time__c),12,2))+9)+(VALUE(MID(TEXT(Taisya_Time__c) ,15,2)) /60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社時間を数値換算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taisyo_data__c</fullName>
        <description>（出社日が昨日かつ退社日時が空欄）もしくは、出社日が今日だったら1、
それ以外は0</description>
        <formula>if(OR(AND( Syussya_bi__c = TODAY() -1 , ISNULL( Taisya_Time__c )), Syussya_bi__c = TODAY() ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社対象データフラグ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Time__c</fullName>
        <formula>(Taisya_Time__c - Syussya_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤務時間（h）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>syukkinn_Scon__c</fullName>
        <description>Scon実行用項目</description>
        <formula>SUBSTITUTE(TEXT(DATEVALUE( Syussya_Time__c )), &quot;-&quot;,&quot;/&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出勤日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zangyo_time_18pm__c</fullName>
        <description>1.退社時間（数値）－出社時間（数値）を算出…総勤務時間
2.18-出社時間（数値）を算出…定時時間内の勤務時間
3.上記1-2を実施</description>
        <formula>IF( Taisya_Hour__c &lt;= 18 , 0 , Taisya_Time_value__c - 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残業時間（18時以降）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zangyou__c</fullName>
        <description>勤務時間が9時間以上の場合を残業時間として算出</description>
        <formula>if( Working_Time__c -9&lt;=0,0,Working_Time__c -9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残業時間（h）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>タイムカード</label>
    <listViews>
        <fullName>GroupMail_Timecard</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>NAME</columns>
        <columns>syukkinn_Scon__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyo_time_18pm__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syussya_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2007 12:00 AM</value>
        </filters>
        <filters>
            <field>Syussya_Time__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2007 12:00 AM</value>
        </filters>
        <label>【デモ】タイムカード一覧</label>
    </listViews>
    <listViews>
        <fullName>View_d_2</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>x00</fullName>
        <columns>NAME</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>zangyo_time_18pm__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>00.すべて選択</label>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <columns>NAME</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>zangyo_time_18pm__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syussya_Time__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>01.今月のデータ</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <columns>NAME</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>zangyo_time_18pm__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syussya_Time__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>02.先月のデータ</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}-{0}</displayFormat>
        <label>NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>